# Backend/docs/swagger.json
@@ -44,8 +44,8 @@
                             "$ref": "#/definitions/db.Admin"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request"
+                    "401": {
+                        "description": "Unauthorized"
                     }
                 }
             }
@@ -187,8 +187,11 @@
                             "$ref": "#/definitions/db.User"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request"
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
                     }
                 }
             }
@@ -331,6 +334,17 @@
                 "username": {
                     "type": "string"
                 }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "OAuth2Application": {
+            "type": "oauth2",
+            "flow": "application",
+            "tokenUrl": "http://localhost:4000/oauth/",
+            "scopes": {
+                "admin": " Grants read and write access to administrative information",
+                "write": " Grants write access"
             }
         }
     }
